--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,25 @@
 [package]
-name = "ai_agent"
+name = "sharpi"
 version = "0.1.0"
 edition = "2021"
-description = "AI agent with Anthropic Sonnet support and terminal integration"
-authors = ["Your Name <your.email@example.com>"]
+description = "SharPi - An AI coding assistant"
+authors = ["SharPi Contributors"]
+license = "MIT"
 rust-version = "1.80.0"
 
 [dependencies]
 anyhow = "1.0"
 log = "0.4"
 ureq = "2.9.1"
+toml = "0.7"
+serde = { version = "1.0", features = ["derive"] }
+dirs = "5.0"
+serde_json = "1.0"
 
 [[bin]]
-name = "ai-agent"
+name = "spi"
 path = "src/bin/main.rs"
 
 [lib]
-name = "ai_agent"
+name = "sharpi"
 path = "src/lib.rs"
