--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ toml = "0.7"
 serde = { version = "1.0", features = ["derive"] }
 dirs = "5.0"
 serde_json = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
+uuid = { version = "1.6", features = ["v4", "serde"] }
 
 [[bin]]
 name = "spi"
